[metadata]
name = staffeln
summary = OpenStack Boilerplate contains all the boilerplate you need to create an OpenStack package.
description-file =
    README.md
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    staffeln
data_files =
    etc/staffeln =
        etc/staffeln/staffeln.conf

[entry_points]
console_scripts =
    staffeln-api = staffeln.cmd.api:main
    staffeln-conductor = staffeln.cmd.conductor:main
    staffeln-db-manage = staffeln.cmd.dbmanage:main
wsgi_scripts =
    staffeln-api-wsgi = staffeln.api:app
staffeln.database.migration_backend =
    sqlalchemy = staffeln.db.sqlalchemy.migration
